syntax = "proto3";

package dss;
option go_package = "rpc/dss";

import "google/protobuf/timestamp.proto";

service Forms {
	rpc ContactUs(ContactUsReq) returns (ContactUsRes);
	rpc SafetyReport(SafetyReportReq) returns (SafetyReportRes);
}

message ContactUsReq {
	string name = 1;
	string email = 2;
	string msg = 3;
	string recaptcha_response = 4;
}

message ContactUsRes {}

message SafetyReportReq {
	google.protobuf.Timestamp occurred_on = 1;
	string description = 2;
	int32 severity = 3;
	bool issues_before = 4;
	string resolution = 5;
	string name = 6;
	string email = 7;
	string phone_number = 8;
	string recaptcha_response = 9;
}

message SafetyReportRes {}
